--- a/preview.html
+++ b/preview.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="../../libs/font-awesome/css/font-awesome.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <style type="text/css">
         body {
             margin: 0;
@@ -40,6 +39,7 @@
             margin-right: 30px;
         }
         .preview__action--buy a {
+            color: white;
             cursor: pointer;
             margin-right: 20px;
             font-size: 15px;
@@ -61,7 +61,8 @@
         }
         .preview__actions button {
             /*background-color: #1bc873;*/
-          /*  border-color:#181F4A!important;*/
+           /* border-color:#181F4A!important;
+            background-color: #fff;*/
             background-color: transparent;
             border-radius: 25px;
             font-size: 14px;
@@ -87,7 +88,7 @@
             font-size: 20px;
         }
         .reload_resume_page a{
-            color: #ffffff;
+            color:#fff;
             font-size: 14px!important;
             margin-right: 0px!important;
             text-decoration: none;
@@ -104,7 +105,6 @@
             transition-property: background-color,border-color,color,box-shadow,filter;
             transition-duration: .3s;
         }
-
         iframe {
             width: 100%;
             height: 100%;
